Archive2/1c/063e4e86b6f274/output
main.cpp: In function 'int main()':
main.cpp:68:13: error: no match for 'operator=' (operand types are 'const Object' and 'Object')
     ob[idx] = targ;
             ^
main.cpp:68:13: note: candidate is:
main.cpp:27:19: note: const Object& Object::operator=(const Object&) <near match>
     const Object& operator= (const Object& rhs) {
                   ^
main.cpp:27:19: note:   no known conversion for implicit 'this' parameter from 'const Object*' to 'Object*'
